--- a/test-output/old/inetBankingV1/classes.html
+++ b/test-output/old/inetBankingV1/classes.html
@@ -4,27 +4,11 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.inetbanking.testcases.TC_DeleteCustTest_006</td>
+<td>com.inetbanking.testcases.TC_LoginTest_002</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>logout</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>addCust</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>editCust</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>deleteCust</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>login</td>
