--- a/test-output/old/inetBankingV1/methods.html
+++ b/test-output/old/inetBankingV1/methods.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>inetBankingV1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b4a39d">  <td>21/03/16 12:38:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;endResult</td> 
-<td>&nbsp;</td>  <td>main@1262408432</td>   <td></td> </tr>
-<tr bgcolor="b4a39d">  <td>21/03/16 12:38:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;endResult</td> 
-<td>&nbsp;</td>  <td>main@1262408432</td>   <td></td> </tr>
-<tr bgcolor="fcb6ab">  <td>21/03/16 12:38:35</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">login</td> 
+<tr bgcolor="fcb6ab">  <td>21/03/16 13:02:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">login</td> 
   <td>main@1262408432</td>   <td></td> </tr>
-<tr bgcolor="b4a39d">  <td>21/03/16 12:38:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;endResult</td> 
-<td>&nbsp;</td>  <td>main@1262408432</td>   <td></td> </tr>
-<tr bgcolor="b4a39d">  <td>21/03/16 12:38:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;endResult</td> 
-<td>&nbsp;</td>  <td>main@1262408432</td>   <td></td> </tr>
-<tr bgcolor="fcb6ab">  <td>21/03/16 12:38:35</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">login</td> 
+<tr bgcolor="fcb6ab">  <td>21/03/16 13:02:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">login</td> 
   <td>main@1262408432</td>   <td></td> </tr>
-<tr bgcolor="fcb6ab">  <td>21/03/16 12:38:35</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">login</td> 
+<tr bgcolor="fcb6ab">  <td>21/03/16 13:02:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">login</td> 
   <td>main@1262408432</td>   <td></td> </tr>
-<tr bgcolor="fcb6ab">  <td>21/03/16 12:38:35</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">login</td> 
+<tr bgcolor="fcb6ab">  <td>21/03/16 13:02:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">login</td> 
   <td>main@1262408432</td>   <td></td> </tr>
-<tr bgcolor="b4a39d">  <td>21/03/16 12:38:35</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="b4a39d">  <td>21/03/16 12:38:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;endResult</td> 
+<tr bgcolor="b4a39d">  <td>21/03/16 13:02:42</td>   <td>4237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;endResult</td> 
 <td>&nbsp;</td>  <td>main@1262408432</td>   <td></td> </tr>
-<tr bgcolor="b4a39d">  <td>21/03/16 12:38:11</td>   <td>-24057</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&gt;&gt;setup</td> 
+<tr bgcolor="b4a39d">  <td>21/03/16 13:02:42</td>   <td>4237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;endResult</td> 
+<td>&nbsp;</td>  <td>main@1262408432</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>21/03/16 13:02:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">login</td> 
+  <td>main@1262408432</td>   <td></td> </tr>
+<tr bgcolor="b4a39d">  <td>21/03/16 13:02:42</td>   <td>4237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;endResult</td> 
+<td>&nbsp;</td>  <td>main@1262408432</td>   <td></td> </tr>
+<tr bgcolor="b4a39d">  <td>21/03/16 13:02:13</td>   <td>-24908</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1262408432</td>   <td></td> </tr>
-<tr bgcolor="fcb6ab">  <td>21/03/16 12:38:35</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">login</td> 
-  <td>main@1262408432</td>   <td></td> </tr>
+<tr bgcolor="b4a39d">  <td>21/03/16 13:02:42</td>   <td>4237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;endResult</td> 
+<td>&nbsp;</td>  <td>main@1262408432</td>   <td></td> </tr>
+<tr bgcolor="b4a39d">  <td>21/03/16 13:02:42</td>   <td>4237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;endResult</td> 
+<td>&nbsp;</td>  <td>main@1262408432</td>   <td></td> </tr>
+<tr bgcolor="b4a39d">  <td>21/03/16 13:02:42</td>   <td>4650</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1262408432</td>   <td></td> </tr>
 </table>
