This is updated

--- a/test-output/old/inetBankingV1/methods.html
+++ b/test-output/old/inetBankingV1/methods.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>inetBankingV1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fcb6ab">  <td>21/03/16 21:48:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">login</td> 
-  <td>main@1109113497</td>   <td></td> </tr>
-<tr bgcolor="b4a39d">  <td>21/03/16 21:48:28</td>   <td>3885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;endResult</td> 
-<td>&nbsp;</td>  <td>main@1109113497</td>   <td></td> </tr>
-<tr bgcolor="fcb6ab">  <td>21/03/16 21:48:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">login</td> 
-  <td>main@1109113497</td>   <td></td> </tr>
-<tr bgcolor="b4a39d">  <td>21/03/16 21:48:29</td>   <td>4263</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1109113497</td>   <td></td> </tr>
-<tr bgcolor="fcb6ab">  <td>21/03/16 21:48:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">login</td> 
-  <td>main@1109113497</td>   <td></td> </tr>
-<tr bgcolor="b4a39d">  <td>21/03/16 21:48:28</td>   <td>3885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;endResult</td> 
-<td>&nbsp;</td>  <td>main@1109113497</td>   <td></td> </tr>
-<tr bgcolor="b4a39d">  <td>21/03/16 21:48:28</td>   <td>3885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;endResult</td> 
-<td>&nbsp;</td>  <td>main@1109113497</td>   <td></td> </tr>
-<tr bgcolor="b4a39d">  <td>21/03/16 21:48:06</td>   <td>-18000</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1109113497</td>   <td></td> </tr>
-<tr bgcolor="fcb6ab">  <td>21/03/16 21:48:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">login</td> 
-  <td>main@1109113497</td>   <td></td> </tr>
-<tr bgcolor="fcb6ab">  <td>21/03/16 21:48:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">login</td> 
-  <td>main@1109113497</td>   <td></td> </tr>
-<tr bgcolor="b4a39d">  <td>21/03/16 21:48:28</td>   <td>3885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;endResult</td> 
-<td>&nbsp;</td>  <td>main@1109113497</td>   <td></td> </tr>
-<tr bgcolor="b4a39d">  <td>21/03/16 21:48:28</td>   <td>3885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@2d710f1a]">&lt;&lt;endResult</td> 
-<td>&nbsp;</td>  <td>main@1109113497</td>   <td></td> </tr>
+<tr bgcolor="abaca9">  <td>21/03/17 11:30:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">&lt;&lt;endResult</td> 
+<td>&nbsp;</td>  <td>main@138776324</td>   <td></td> </tr>
+<tr bgcolor="abaca9">  <td>21/03/17 11:30:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">&lt;&lt;endResult</td> 
+<td>&nbsp;</td>  <td>main@138776324</td>   <td></td> </tr>
+<tr bgcolor="abaca9">  <td>21/03/17 11:30:12</td>   <td>-27937</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@138776324</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>21/03/17 11:30:35</td>   <td>-5132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">login</td> 
+  <td>main@138776324</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>21/03/17 11:30:35</td>   <td>-5132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">login</td> 
+  <td>main@138776324</td>   <td></td> </tr>
+<tr bgcolor="abaca9">  <td>21/03/17 11:30:41</td>   <td>587</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@138776324</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>21/03/17 11:30:35</td>   <td>-5132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">login</td> 
+  <td>main@138776324</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>21/03/17 11:30:35</td>   <td>-5132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">login</td> 
+  <td>main@138776324</td>   <td></td> </tr>
+<tr bgcolor="abaca9">  <td>21/03/17 11:30:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">&lt;&lt;endResult</td> 
+<td>&nbsp;</td>  <td>main@138776324</td>   <td></td> </tr>
+<tr bgcolor="abaca9">  <td>21/03/17 11:30:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">&lt;&lt;endResult</td> 
+<td>&nbsp;</td>  <td>main@138776324</td>   <td></td> </tr>
+<tr bgcolor="abaca9">  <td>21/03/17 11:30:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">&lt;&lt;endResult</td> 
+<td>&nbsp;</td>  <td>main@138776324</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>21/03/17 11:30:35</td>   <td>-5132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">login</td> 
+  <td>main@138776324</td>   <td></td> </tr>
 </table>
