--- a/test-output/old/inetBankingV1/methods-alphabetical.html
+++ b/test-output/old/inetBankingV1/methods-alphabetical.html
@@ -1,28 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>inetBankingV1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="abaca9">  <td>21/03/17 11:30:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">&lt;&lt;endResult</td> 
-<td>&nbsp;</td>  <td>main@138776324</td>   <td></td> </tr>
-<tr bgcolor="abaca9">  <td>21/03/17 11:30:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">&lt;&lt;endResult</td> 
-<td>&nbsp;</td>  <td>main@138776324</td>   <td></td> </tr>
-<tr bgcolor="abaca9">  <td>21/03/17 11:30:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">&lt;&lt;endResult</td> 
-<td>&nbsp;</td>  <td>main@138776324</td>   <td></td> </tr>
-<tr bgcolor="abaca9">  <td>21/03/17 11:30:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">&lt;&lt;endResult</td> 
-<td>&nbsp;</td>  <td>main@138776324</td>   <td></td> </tr>
-<tr bgcolor="abaca9">  <td>21/03/17 11:30:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">&lt;&lt;endResult</td> 
-<td>&nbsp;</td>  <td>main@138776324</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>21/03/17 11:30:35</td>   <td>-5132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">login</td> 
-  <td>main@138776324</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>21/03/17 11:30:35</td>   <td>-5132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">login</td> 
-  <td>main@138776324</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>21/03/17 11:30:35</td>   <td>-5132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">login</td> 
-  <td>main@138776324</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>21/03/17 11:30:35</td>   <td>-5132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">login</td> 
-  <td>main@138776324</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>21/03/17 11:30:35</td>   <td>-5132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_002.login(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">login</td> 
-  <td>main@138776324</td>   <td></td> </tr>
-<tr bgcolor="abaca9">  <td>21/03/17 11:30:12</td>   <td>-27937</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@138776324</td>   <td></td> </tr>
-<tr bgcolor="abaca9">  <td>21/03/17 11:30:41</td>   <td>587</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.inetbanking.testcases.TC_LoginTest_002@1b11171f]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@138776324</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>21/03/23 10:45:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_DeleteCustTest_006.addCust()[pri:0, instance:com.inetbanking.testcases.TC_DeleteCustTest_006@61001b64]">addCust</td> 
+  <td>main@1722570594</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>21/03/23 10:45:08</td>   <td>5225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_DeleteCustTest_006.deleteCust()[pri:0, instance:com.inetbanking.testcases.TC_DeleteCustTest_006@61001b64]">deleteCust</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>21/03/23 10:45:08</td>   <td>5214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_DeleteCustTest_006.editCust()[pri:0, instance:com.inetbanking.testcases.TC_DeleteCustTest_006@61001b64]">editCust</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="b4a39d">  <td>21/03/23 10:45:07</td>   <td>4182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_DeleteCustTest_006@61001b64]">&lt;&lt;endResult</td> 
+<td>&nbsp;</td>  <td>main@1722570594</td>   <td></td> </tr>
+<tr bgcolor="b4a39d">  <td>21/03/23 10:45:07</td>   <td>4182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.endResult(org.testng.ITestResult)[pri:0, instance:com.inetbanking.testcases.TC_DeleteCustTest_006@61001b64]">&lt;&lt;endResult</td> 
+<td>&nbsp;</td>  <td>main@1722570594</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>21/03/23 10:45:00</td>   <td>-2713</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_DeleteCustTest_006.login()[pri:0, instance:com.inetbanking.testcases.TC_DeleteCustTest_006@61001b64]">login</td> 
+  <td>main@1722570594</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>21/03/23 10:45:08</td>   <td>5234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_DeleteCustTest_006.logout()[pri:0, instance:com.inetbanking.testcases.TC_DeleteCustTest_006@61001b64]">logout</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="b4a39d">  <td>21/03/23 10:44:53</td>   <td>-9040</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.inetbanking.testcases.TC_DeleteCustTest_006@61001b64]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1722570594</td>   <td></td> </tr>
+<tr bgcolor="b4a39d">  <td>21/03/23 10:45:08</td>   <td>5241</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.inetbanking.testcases.TC_DeleteCustTest_006@61001b64]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1722570594</td>   <td></td> </tr>
 </table>
